feat: add endpoints to backend
